NNO-12378 Кнопка-поле. Не работает динамическое задание иконки